--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <h1>Orhun Vural</h1>
-    <h2>Data Visualization Assignment II</h2>
+    <h2>Data Visualization Project</h2>
 
     
     <div class="container" align="center">
